# blackpill-node

./: .gitignore  CMakeLists.txt  README.md
cmake/: amd64.cmake  arm.cmake
docs/scheme/blackpill_board/: blackpill_board.kicad_pcb  blackpill_board.kicad_pro  blackpill_board.kicad_sch
docs/scheme/board/: board.kicad_pro
docs/uml/: T01.xmi
src/: FreeRTOSConfig.h  board.adc_1.c  board.adc_1.h  board.c  board.exti_1.c  board.exti_1.h  board.exti_15_10.c  board.exti_15_10.h  board.exti_2.c  board.exti_2.h  board.gpio_a.c  board.gpio_a.h  board.gpio_c.c  board.gpio_c.h  board.h  board.i2c_1.c  board.i2c_1.h  board.spi_1.c  board.spi_1.h  board.timer_2.c  board.timer_2.h  board.timer_3.c  board.timer_3.h  board.type.h  board.types.h  board.uart_2.c  board.uart_2.h  board_B02.c  board_B02.h  board_T01.c  board_T01.h  board_factory.c  board_factory.h  board_factory.type.h  embedded_logger.c  embedded_logger.h  lfs_config.c  lfs_config.h  logger.c  logger.h  (+25 more)
src/bootloader/: main.c  stm32f4xx_hal_systick.c
src/device/: bme280_sensor.c  bme280_sensor.h  mcp23017_expander.c  mcp23017_expander.h  ssd1306_display.h  w25q32bv_flash.c  w25q32bv_flash.h
src/devices/: bme280_sensor.c  bme280_sensor.h  mcp23017_expander.c  mcp23017_expander.h  ssd1306_display.c  ssd1306_display.h  w25q32bv_flash.c  w25q32bv_flash.h
src/gold/: STM32F411CEUx_FLASH.ld  STM32F411CEUx_FLASH_APPLICATION.ld  STM32F411CEUx_FLASH_BOOTLOADER.ld  board.config.h
src/silver/: STM32F401CCUx_FLASH.ld  STM32F401CCUx_FLASH_APPLICATION.ld  STM32F401CCUx_FLASH_BOOTLOADER.ld  board.config.h
tests/: CMakeLists.txt
tests/src/: node_B02.test.cpp  node_T01.test.cpp
tests/src/device/: mcp23017_expander.test.cpp
tests/src/devices/: mcp23017_expander.test.cpp
